# Snake-game

./: .gitignore  CMakeLists.txt  ItemsContainer.cpp  ItemsContainer.h  Pepper.cpp  README.md  SnakeAI.cpp  SnakeAI.h  database.cpp  database.h  food.cpp  leaderboardwindow.cpp  leaderboardwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwindow.cpp  menuwindow.h  menuwindow.ui  menuwindow.ui.autosave  snake.cpp  snake.h  usersdb.db  usersdb.sqbpro
snake-game/: food.cpp  food.h  imagesource.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  snake-game.pro  snake.cpp  snake.h
